alignment and boxed fix
- align containers with text for boxed view

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16154,6 +16154,7 @@ h2 {
 }
 
 .copyright {
+  padding-left: 40px;
   font-size: 0.8rem;
   background: yellow;
 }
@@ -16226,9 +16227,21 @@ nav ul li {
   margin-top: -30px;
 }
 
+.social {
+  padding-right: 40px;
+}
+
 .social i {
   font-size: 2rem;
-  padding: 5px;
+  padding: 10px;
+}
+
+.row {
+  margin: 0px;
+}
+
+.footer-title {
+  padding-right: 40px;
 }
 
 .footer-logo img {
@@ -16300,6 +16313,10 @@ nav ul li {
 .slider-text img {
   height: 200px;
   -webkit-filter: drop-shadow(2px 2px 2px #222);
+}
+
+.slider-text h2 {
+  color: #fff;
 }
 
 .slider-nav {
